# mini_project_be13

./: .env  .env.example  .gitignore  .gitmessage.text  CONTRIBUTING.md  README.md  aerich.ini  database.py  db.sqlite3  dev-requirements.txt  main.py  models.py  push_pr.sh  pyproject.toml  requirements.txt  schemas.py  scrap_quotes.py
app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py
app/api/v1/: auth.py
app/auth/: auth.py
app/core/: config.py
app/crud/: bookmark.py  crud.py
app/models/: __init__.py  diary.py  models.py
app/routers/: __init__.py  auth.py  diary.py  questions.py  quote.py
app/schemas/: __init__.py  diary.py  models.py  schemas.py  user.py
app/scraping/: scrap_quotes.py
deploy/: gunicorn.conf.py
minipro/: .gitignore  pyvenv.cfg
routers/: questions.py
scripts/: gunicorn_start.sh
tests/: test_auth.py
