[project]
name = "FastAPI-app"
version = "0.1.0"
description = "A simple FastAPI application."

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "tortoise-orm",
  "aiosqlite",
  "passlib[bcrypt]",
  "python-jose[cryptography]",
  "uvicorn",
  "python-multipart",
  "email-validator"
]

dev-requirements = [
    "uvicorn[standard]",
    "pytest",
    "gunicorn",
]
